[tool.poetry]
name = "pyrenv"
version = "0.1.0"
description = "Integrate renv and poetry envs with ease."
authors = ["Gustavo Magaña López <gmaganna.biomed@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
